# src/routes/payment.router.ts
@@ -1,15 +1,40 @@
-import { FastifyInstance } from 'fastify';
+import { FastifyInstance, FastifyRequest } from 'fastify';
 import { PaymentService } from '../services/payment.service';
-import { stripeClient } from '../configs/stripe.config';
-import Stripe from 'stripe';
+import { SubscribeRequestSchema, SubscribeResponseSchema } from '../schemas/payment.schema';
+import { HttpStatus } from '../shared/status';
+import { ExceptionSchemas } from '../schemas/exception.schema';
+import { UserHasAlreadySubscribedException, UserNotFoundException } from '../exceptions/user.exception';
+import { BadRequestException } from '../exceptions/http.exception';
+import { SubscribeDto } from '../entities/dtos/payment.dto';
+import { AuthRequest, authPlugin } from '../plugins/auth.plugin';
 
 const paymentService = new PaymentService();
 
 export async function paymentRouter(fastify: FastifyInstance): Promise<void> {
-  fastify.post('/subsrcibe', {}, async (req, res) => {
-    const subscription = await paymentService.subscribe(req.body);
-    res.status(200).send(subscription);
-  });
+  fastify.post<{ Body: SubscribeDto }>(
+    '/subsrcibe',
+    {
+      schema: {
+        tags: ['payment'],
+        description: 'Subscribe',
+        body: SubscribeRequestSchema(),
+        response: {
+          [HttpStatus.OK]: SubscribeResponseSchema(),
+          [HttpStatus.BAD_REQUEST]: ExceptionSchemas.exception(
+            UserHasAlreadySubscribedException,
+            BadRequestException,
+          ),
+          [HttpStatus.NOT_FOUND]: ExceptionSchemas.exception(UserNotFoundException),
+        },
+      },
+      preHandler: [authPlugin],
+    },
+    async (req: AuthRequest & FastifyRequest<{ Body: SubscribeDto }>, res) => {
+      const subscription = await paymentService.subscribe({ email: req.user.email, ...req.body });
+
+      res.status(200).send(subscription);
+    },
+  );
 
   fastify.post(
     '/webhook',
@@ -19,37 +44,10 @@ export async function paymentRouter(fastify: FastifyInstance): Promise<void> {
       },
     },
     async (req, res) => {
-      console.log(900, req.rawBody, 901, typeof req.rawBody);
-      const endpointSecret = 'whsec_BPmGeB4rUfRQl5F5pJqPgJjrCoBrFMxm';
-
-      const sig = req.headers['stripe-signature']!;
-
-      let event: Stripe.Event;
-
-      try {
-        event = stripeClient.webhooks.constructEvent(req.rawBody!, sig, endpointSecret);
-      } catch (e) {
-        console.log(e);
-        throw e;
-      }
-      console.log(300, event);
-      // Handle the event
-      switch (event.type) {
-        case 'customer.subscription.created':
-          // eslint-disable-next-line no-case-declarations
-          const customerSubscriptionCreated = event.data.object;
-          console.log(500, customerSubscriptionCreated);
-          // Then define and call a function to handle the event customer.subscription.created
-          break;
-        case 'customer.subscription.deleted':
-          // eslint-disable-next-line no-case-declarations
-          const customerSubscriptionDeleted = event.data.object;
-          console.log(600, customerSubscriptionDeleted);
-          // Then define and call a function to handle the event customer.subscription.deleted
-          break;
-        default:
-          console.log(`Unhandled event type ${event.type}`);
-      }
+      await paymentService.paymentWebhook({
+        body: req.rawBody!,
+        signature: req.headers['stripe-signature']!,
+      });
     },
   );
 }
